[project]
name = "opioid-conversion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "openai>=1.102.0",
    "pydantic>=2.11.7",
    "uvicorn>=0.35.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
]
